...
		
		static let openSystemSettings = "AppStrings.NotificationSettings.openSystemSettings"
		static let close = "AppStrings.NotificationSettings.DeltaOnboarding.primaryButtonTitle"
	}
	
...
			static let titleLabel = "AppStrings.Home.TestRegistrationCell.titleLabel"
			static let descriptionLabel = "AppStrings.Home.TestRegistrationCell.descriptionLabel"
			static let submitCardButton = "AppStrings.Home.TestRegistrationCell.submitCardButton"
		}
		
...
	
	enum ContactDiaryInformation {
		static let imageDescription = "AppStrings.ContactDiaryInformation.imageDescription"
		static let descriptionTitle = "AppStrings.ContactDiaryInformation.descriptionTitle"
		static let descriptionSubHeadline = "AppStrings.ContactDiaryInformation.descriptionSubHeadline"
		static let dataPrivacyTitle = "AppStrings.ContactDiaryInformation.dataPrivacyTitle"
		static let legal_1 = "AppStrings.ContactDiaryInformation.legalHeadline_1"
		
...
		static let imprintSection4Text = "AppStrings.AppInformation.imprintSection4Text"
		static let privacyImageDescription = "AppStrings.AppInformation.privacyImageDescription"
		static let privacyTitle = "AppStrings.AppInformation.privacyTitle"
		static let termsImageDescription = "AppStrings.AppInformation.termsImageDescription"
		static let termsTitle = "AppStrings.AppInformation.termsTitle"
...
		static let fakeHC1 = "QRScanner_FAKE_HC1"
		static let fakeHC2 = "QRScanner_FAKE_HC2"
		static let fakePCR = "QRScanner_FAKE_PCR"
		static let fakePCR2 = "QRScanner_FAKE_PCR2"
		static let fakeEvent = "QRScanner_FAKE_EVENT"
...

	enum SRSConsentScreen {
		static let primaryButton = "AppStrings.SRSConsentScreen.primaryButton"
		static let secondaryButton = "AppStrings.SRSConsentScreen.secondaryButton"
		static let accImageDescription = "AppStrings.SRSConsentScreen.accImageDescription"
		static let headerSection1 = "AppStrings.SRSConsentScreen.headerSection1"
		static let acknowledgementTitle = "AppStrings.SRSConsentScreen.acknowledgementTitle"
		static let dataProcessingDetailInfoButton = "AppStrings.SRSConsentScreen.dataProcessingDetailInfoButton"
	}
...
		static let sectionHeadline = "AppStrings.ExposureSubmission_DispatchSectionHeadline"
		static let sectionHeadline2 = "AppStrings.ExposureSubmission_DispatchSectionHeadline2"
		static let qrCodeButtonDescription = "AppStrings.ExposureSubmissionDispatch.qrCodeButtonDescription"
		static let positiveSelfTestButtonDescription = "AppStrings.ExposureSubmissionDispatch.positiveSelfTestButtonDescription"
		static let tanInputView = "AppStrings.ExposureSubmissionDispatch.TaninputView"
...
	
	enum ExposureSubmissionResult {
		static let testedPersonName = "AppStrings.ExposureSubmissionResult.testedPersonName"
		static let procedure = "AppStrings.ExposureSubmissionResult.procedure"
		static let furtherInfos_Title = "AppStrings.ExposureSubmissionResult.furtherInfos_Title"
...

		enum Antigen {
			static let proofDesc = "AppStrings.ExposureSubmissionResult.Antigen.proofDesc"
		}

		enum RemoveAlert {
			static let deleteButton = "AppStrings.ExposureSubmissionResult.removeAlert_ConfirmButtonTitle"
		}
	}
...
		enum TestOwnerSelection {
			static let userButton = "AppStrings.ExposureSubmission.TestOwnerSelection.userButton"
			static let familyMemberButton = "AppStrings.ExposureSubmission.TestOwnerSelection.familyMemberButton"
		}
		
...
		static let image = "ExposureSubmissionIntroViewController.image"
		
		static let primaryFooterButton = "General.primaryFooterButton"
		static let secondaryFooterButton = "General.secondaryFooterButton"
		static let cancelButton = "General.cancelButton"
		static let defaultButton = "General.defaultButton"
...
		static let home = "TabBar.home"
		static let certificates = "TabBar.certificates"
		static let scanner = "TabBar.scanner"
		static let checkin = "TabBar.checkin"
		static let diary = "TabBar.diary"
...
		enum FamilyMemberConsent {
			static let imageDescription = "AppStrings.HealthCertificate.FamilyMemberConsent.imageDescription"
			static let textInput = "HealthCertificate.FamilyMemberConsent.textInput"
			static let primaryButton = "HealthCertificate.FamilyMemberConsent.primaryButton"

...
		static let outdatedAntigen = "AccessibilityIdentifiers.FamilyMemberCoronaTestCell.outdatedAntigen"

		static let homeCell = "AccessibilityIdentifiers.FamilyMemberCoronaTestCell.homeCell"
		static let homeCellDetailText = "AccessibilityIdentifiers.FamilyMemberCoronaTestCell.homeCellDetailText"

		enum Overview {
			static let testCell = "AccessibilityIdentifiers.FamilyMemberCoronaTestCell.Overview.testCell"
		}

...
