...
		timeInterval2TextField.text = "\(WarnOthersNotificationsTimeInterval.intervalTwo)"
	}
	
	@objc
	private func resetNotificationsButtonTapped() {
		warnOthersReminder.reset()
		showAlert(title: "Done", message: "Warn others notifications can appear again.")
	}

	private func showAlert(title: String, message: String) {
		let alert = UIAlertController(title: title, message: message, preferredStyle: .alert)
		alert.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
		self.present(alert, animated: true, completion: nil)
...
